<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/misp_tilte_with_save_layout" />
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

 
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_user_name"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/user_user_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_sel"
                    android:hint="真实姓名"
                    android:paddingLeft="20dp"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_user_name"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/user_user_nickname_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_sel"
                    android:hint="真实姓名"
                    android:paddingLeft="20dp"
                    android:textSize="14dp" />

            </LinearLayout>
              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_user_sex"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/user_user_sex_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_sel"
                    android:hint="性别"
                    android:paddingLeft="20dp"
                    android:textSize="14dp" />

            </LinearLayout>
            
              

          <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_user_birthday"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/user_user_birthday_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_sel"
                    android:hint="生日"
                    android:paddingLeft="20dp"
                    android:textSize="14dp" />

            </LinearLayout>
            
               
          <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_user_phone"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/user_user_phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_sel"
                    android:hint="手机号码"
                    android:paddingLeft="20dp"
                    android:textSize="14dp" />

            </LinearLayout>
            
          
          
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_user_email"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/user_user_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_sel"
                    android:hint="邮箱"
                    android:paddingLeft="20dp"
                    android:textSize="14dp" />

            </LinearLayout>
            
           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_user_addr"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp" >

                    <EditText
                        android:id="@+id/user_user_addr_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_sel"
                        android:gravity="center_vertical|top"
                        android:hint="常用地址"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/user_set_location_addr_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignBottom="@id/user_user_addr_text"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:background="@color/blue_light"
                        android:drawableRight="@drawable/icon_gps"
                        android:padding="5dp"
                        android:text="定位"
                        android:textColor="@color/white"
                        android:textSize="@dimen/content_font_size_sm" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
 
 
    </ScrollView>

</LinearLayout>
